--- a/client/src/app/shared/spreadsheet/components/view-options/column-view-options/column-view-options.component.html
+++ b/client/src/app/shared/spreadsheet/components/view-options/column-view-options/column-view-options.component.html
@@ -23,7 +23,7 @@
                 <i [class]="`${column.field.icon}`"></i>
               }
               <span class="font-medium break-all">
-                {{ column.field.name }}
+                {{ column.name }}
               </span>
               @if (column.field.required) {
                 <i class="icon icon-asterisk text-red-500"></i>
