--- a/client/src/app/shared/spreadsheet/components/view-options/data-view-options/data-view-options.component.html
+++ b/client/src/app/shared/spreadsheet/components/view-options/data-view-options/data-view-options.component.html
@@ -22,7 +22,7 @@
               <span class="break-all">
                 {{ first ? (isGroupType() ? 'group by' : 'sort by') : 'then by' }}
                 <span class="font-medium">
-                  {{ item.column.field.name }}
+                  {{ item.column.name }}
                 </span>
               </span>
             </div>
