--- a/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
+++ b/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
@@ -75,13 +75,24 @@
                 </p>
               </div>
               <div class="flex flex-col gap-1">
+                <label class="text-sm">UI Name</label>
+                <input
+                  pInputText
+                  name="uiName"
+                  [(ngModel)]="columnFormData.presentation.uiName"
+                  placeholder="Input here..."
+                />
+                <p class="text-surface-500 text-xs">
+                  The display name for the column. This does not affect the database schema.
+                </p>
+              </div>
+              <div class="flex flex-col gap-1">
                 <label class="text-sm">Description</label>
                 <textarea
                   pTextarea
                   name="description"
                   [(ngModel)]="columnFormData.comment"
                   rows="5"
-                  class="col-span-2"
                   placeholder="Input here..."
                   maxlength="500"
                 ></textarea>
