--- a/client/src/app/features/base/table/components/record-editor/record-editor-drawer.component.html
+++ b/client/src/app/features/base/table/components/record-editor/record-editor-drawer.component.html
@@ -1,13 +1,13 @@
 <ng-template #fieldTmpl let-field="field">
   <div class="grid grid-cols-3 w-full gap-12">
-    <label [attr.for]="field.name" class="col-span-1">
+    <label [attr.for]="field.params.uiName || field.name" class="col-span-1">
       <div class="flex items-center gap-2">
         @if (field.params.primary) {
           <i class="icon icon-key rotate-45" style="color: var(--p-primary-color)"></i>
         } @else {
           <i [class]="`${field.icon}`"></i>
         }
-        <p class="font-medium text-sm">{{ field.name }}</p>
+        <p class="font-medium text-sm">{{ field.params.uiName || field.name }}</p>
       </div>
       <p class="text-surface-500 text-xs">
         @if (field.description) {
