--- a/client/src/app/features/base/table/pages/table-list/table-list.component.html
+++ b/client/src/app/features/base/table/pages/table-list/table-list.component.html
@@ -94,15 +94,16 @@
           class="group flex items-center cursor-pointer px-4 py-2 text-surface-700 hover:bg-gray-100 duration-150 transition-colors p-ripple"
           [class.bg-gray-100]="table.name === tblService.activeTable()?.name"
         >
-          <div class="flex flex-1">
+          <div class="flex flex-1 w-full">
             <i class="icon icon-table-2 text-surface-500 mr-2 mt-0.5"></i>
-            <div class="flex-1">
-              <div class="flex items-center gap-2">
-                <p class="font-medium">{{ table.presentation?.uiName || table.name }}</p>
+            <div class="flex-1 space-y-1 overflow-hidden">
+              @let uiName = table.presentation?.uiName || table.name;
+              <p class="font-medium white-space-nowrap truncate" [attr.title]="uiName">
+                {{ uiName }}
                 @if (table.presentation?.uiName) {
-                  <p class="text-surface-500 text-xs">{{ table.name }}</p>
+                  <span class="text-surface-500 text-xs">{{ table.name }}</span>
                 }
-              </div>
+              </p>
               <p class="text-surface-500 text-xs">
                 @if (table.comment) {
                   {{ table.comment }}
