--- a/client/src/app/shared/spreadsheet/spreadsheet.component.html
+++ b/client/src/app/shared/spreadsheet/spreadsheet.component.html
@@ -190,12 +190,17 @@
           } @else {
             <i [class]="`${column.field.icon}`"></i>
           }
-          <div class="text-sm white-space-nowrap overflow-hidden truncate">
-            {{ column.name }}
-          </div>
-          @if (column.field.required) {
-            <i class="icon icon-asterisk text-red-500"></i>
-          }
+          <p class="overflow-hidden">
+            <span class="text-sm white-space-nowrap truncate" [attr.title]="column.name">
+              {{ column.name }}
+              @if (column.id !== column.name) {
+                <span class="text-surface-500 text-xs">{{ column.id }}</span>
+              }
+            </span>
+            @if (column.field.required) {
+              <i class="icon icon-asterisk text-red-500"></i>
+            }
+          </p>
           @if (column.field.description?.length) {
             <i class="icon icon-info text-surface-500"></i>
           }
@@ -224,12 +229,17 @@
         } @else {
           <i [class]="`${column.field.icon}`"></i>
         }
-        <div class="text-sm white-space-nowrap overflow-hidden truncate" [attr.title]="column.name">
-          {{ column.name }}
-        </div>
-        @if (column.field.required) {
-          <i class="icon icon-asterisk text-red-500"></i>
-        }
+        <p class="overflow-hidden">
+          <span class="text-sm white-space-nowrap truncate" [attr.title]="column.name">
+            {{ column.name }}
+            @if (column.id !== column.name) {
+              <span class="text-surface-500 text-xs">{{ column.id }}</span>
+            }
+          </span>
+          @if (column.field.required) {
+            <i class="icon icon-asterisk text-red-500"></i>
+          }
+        </p>
         @if (column.field.description?.length) {
           <i
             class="icon icon-info text-surface-500"
