fix: Add whitespace-nowrap class to button labels in table detail component for improved UI consistency

--- a/client/src/app/features/base/table/pages/table-detail/table-detail.component.html
+++ b/client/src/app/features/base/table/pages/table-detail/table-detail.component.html
@@ -22,15 +22,15 @@
         @switch (displayMode()) {
           @case ('data-view') {
             <i pButtonIcon class="icon icon-sheet"></i>
-            <span pButtonLabel>Data View</span>
+            <span pButtonLabel class="whitespace-nowrap">Data View</span>
           }
           @case ('calendar-view') {
             <i pButtonIcon class="icon icon-calendar-days"></i>
-            <span pButtonLabel>Calendar View</span>
+            <span pButtonLabel class="whitespace-nowrap">Calendar View</span>
           }
           @case ('map-view') {
             <i pButtonIcon class="icon icon-map-pin"></i>
-            <span pButtonLabel>Map View</span>
+            <span pButtonLabel class="whitespace-nowrap">Map View</span>
           }
         }
         <i pButtonIcon class="icon icon-chevron-down"></i>
