--- a/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
+++ b/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
@@ -1,8 +1,9 @@
 <ng-template #dateFormatBuilder>
   <div class="space-y-2">
     <div class="flex flex-col gap-1">
-      <label class="text-sm">Format</label>
+      <label for="format" class="text-sm">Format</label>
       <p-select
+        inputId="format"
         name="format"
         [(ngModel)]="columnFormData.presentation.format.dateFormat"
         [options]="dateFormats"
@@ -66,12 +67,13 @@
             </label>
             <div class="flex flex-col col-span-2 gap-8">
               <div class="flex flex-col gap-1">
-                <label class="text-sm">
+                <label for="name" class="text-sm">
                   Name
                   <i class="icon icon-asterisk text-red-500"></i>
                 </label>
                 <input
                   pInputText
+                  id="name"
                   name="name"
                   [pAutoFocus]="true"
                   [invalid]="name.invalid && (name.touched || columnForm.submitted)"
@@ -95,9 +97,10 @@
                 </p>
               </div>
               <div class="flex flex-col gap-1">
-                <label class="text-sm">UI Name</label>
+                <label for="uiName" class="text-sm">UI Name</label>
                 <input
                   pInputText
+                  id="uiName"
                   name="uiName"
                   [(ngModel)]="columnFormData.presentation.uiName"
                   placeholder="Input here..."
@@ -107,9 +110,10 @@
                 </p>
               </div>
               <div class="flex flex-col gap-1">
-                <label class="text-sm">Description</label>
+                <label for="description" class="text-sm">Description</label>
                 <textarea
                   pTextarea
+                  id="description"
                   name="description"
                   [(ngModel)]="columnFormData.comment"
                   rows="5"
@@ -129,11 +133,13 @@
           </label>
           <div class="flex flex-col gap-8 col-span-2">
             <div class="flex flex-col gap-1">
-              <label class="text-sm">
+              <label for="type" class="text-sm">
                 Type
                 <i class="icon icon-asterisk text-red-500"></i>
               </label>
               <p-select
+                id="type"
+                inputId="type"
                 name="type"
                 optionLabel="name"
                 optionValue="value"
@@ -162,8 +168,9 @@
             @switch (selectedDataType()) {
               @case (DataType.Text) {
                 <div class="flex flex-col gap-1">
-                  <label class="text-sm">Min length</label>
+                  <label for="minLength" class="text-sm">Min length</label>
                   <p-inputnumber
+                    inputId="minLength"
                     name="minLength"
                     [(ngModel)]="columnFormData.validation.minLength"
                     [useGrouping]="false"
@@ -171,8 +178,9 @@
                   />
                 </div>
                 <div class="flex flex-col gap-1">
-                  <label class="text-sm">Max length</label>
+                  <label for="maxLength" class="text-sm">Max length</label>
                   <p-inputnumber
+                    inputId="maxLength"
                     name="maxLength"
                     [(ngModel)]="columnFormData.validation.maxLength"
                     [useGrouping]="false"
@@ -182,8 +190,9 @@
               }
               @case (DataType.LongText) {
                 <div class="flex flex-col gap-1">
-                  <label class="text-sm">Max size (bytes)</label>
+                  <label for="maxSize" class="text-sm">Max size (bytes)</label>
                   <p-inputnumber
+                    inputId="maxSize"
                     name="maxSize"
                     [(ngModel)]="columnFormData.validation.maxSize"
                     [useGrouping]="false"
@@ -193,8 +202,9 @@
               }
               @case (DataType.Integer) {
                 <div class="flex flex-col gap-1">
-                  <label class="text-sm">Min value</label>
+                  <label for="minValue" class="text-sm">Min value</label>
                   <p-inputnumber
+                    inputId="minValue"
                     name="minValue"
                     [(ngModel)]="columnFormData.validation.minValue"
                     [useGrouping]="false"
@@ -202,8 +212,9 @@
                   />
                 </div>
                 <div class="flex flex-col gap-1">
-                  <label class="text-sm">Max value</label>
+                  <label for="maxValue" class="text-sm">Max value</label>
                   <p-inputnumber
+                    inputId="maxValue"
                     name="maxValue"
                     [(ngModel)]="columnFormData.validation.maxValue"
                     [useGrouping]="false"
@@ -213,8 +224,9 @@
               }
               @case (DataType.Number) {
                 <div class="flex flex-col gap-1">
-                  <label class="text-sm">Min value</label>
+                  <label for="minValue" class="text-sm">Min value</label>
                   <p-inputnumber
+                    inputId="minValue"
                     name="minValue"
                     [(ngModel)]="columnFormData.validation.minValue"
                     mode="decimal"
@@ -225,8 +237,9 @@
                   />
                 </div>
                 <div class="flex flex-col gap-1">
-                  <label class="text-sm">Max value</label>
+                  <label for="maxValue" class="text-sm">Max value</label>
                   <p-inputnumber
+                    inputId="maxValue"
                     name="maxValue"
                     [(ngModel)]="columnFormData.validation.maxValue"
                     mode="decimal"
@@ -240,8 +253,9 @@
               @case (DataType.Date) {
                 <ng-container [ngTemplateOutlet]="dateFormatBuilder"></ng-container>
                 <div class="flex flex-col gap-1">
-                  <label class="text-sm">Min date</label>
+                  <label for="minDate" class="text-sm">Min date</label>
                   <p-datepicker
+                    inputId="minDate"
                     name="minDate"
                     [(ngModel)]="columnFormData.validation.minDate"
                     dataType="string"
@@ -254,8 +268,9 @@
                   />
                 </div>
                 <div class="flex flex-col gap-1">
-                  <label class="text-sm">Max date</label>
+                  <label for="maxDate" class="text-sm">Max date</label>
                   <p-datepicker
+                    inputId="maxDate"
                     name="maxDate"
                     [(ngModel)]="columnFormData.validation.maxDate"
                     dataType="string"
@@ -277,9 +292,10 @@
               @case (DataType.Checkbox) {}
               @case (DataType.Email) {
                 <div class="flex flex-col gap-1">
-                  <label class="text-sm">Allowed domains</label>
+                  <label for="allowedDomains" class="text-sm">Allowed domains</label>
                   <input
                     pInputText
+                    id="allowedDomains"
                     name="allowedDomains"
                     [(ngModel)]="columnFormData.validation.allowedDomains"
                     placeholder="Input here..."
@@ -291,8 +307,9 @@
               }
               @case (DataType.JSON) {
                 <div class="flex flex-col gap-1">
-                  <label class="text-sm">Max size (bytes)</label>
+                  <label for="maxSize" class="text-sm">Max size (bytes)</label>
                   <p-inputnumber
+                    inputId="maxSize"
                     name="maxSize"
                     [(ngModel)]="columnFormData.validation.maxSize"
                     [useGrouping]="false"
@@ -303,8 +320,9 @@
               @case (DataType.GeoPoint) {}
               @case (DataType.Reference) {
                 <div class="flex flex-col gap-1">
-                  <label class="text-sm">Reference to</label>
+                  <label for="table" class="text-sm">Reference to</label>
                   <p-select
+                    inputId="table"
                     name="table"
                     [options]="tableOptions"
                     [(ngModel)]="columnFormData.foreignKey.table"
@@ -318,11 +336,12 @@
                   />
                 </div>
                 <div class="flex flex-col gap-1">
-                  <label class="text-sm">
+                  <label for="onUpdate" class="text-sm">
                     On Update
                     <p class="text-xs text-surface-500">When the parent record is modified...</p>
                   </label>
                   <p-selectbutton
+                    inputId="onUpdate"
                     name="onUpdate"
                     [options]="referentialActions"
                     [(ngModel)]="columnFormData.foreignKey.onUpdate"
@@ -339,11 +358,12 @@
                   </p-selectbutton>
                 </div>
                 <div class="flex flex-col gap-1">
-                  <label class="text-sm">
+                  <label for="onDelete" class="text-sm">
                     On Delete
                     <p class="text-xs text-surface-500">When the parent record is removed...</p>
                   </label>
                   <p-selectbutton
+                    inputId="onDelete"
                     name="onDelete"
                     [options]="referentialActions"
                     [(ngModel)]="columnFormData.foreignKey.onDelete"
@@ -366,8 +386,9 @@
               }
               @case (DataType.Attachment) {
                 <div class="flex flex-col gap-1">
-                  <label class="text-sm">Max files</label>
+                  <label for="maxFiles" class="text-sm">Max files</label>
                   <p-inputnumber
+                    inputId="maxFiles"
                     name="maxFiles"
                     [(ngModel)]="columnFormData.validation.maxFiles"
                     [useGrouping]="false"
@@ -515,32 +536,34 @@
           <div class="flex flex-col gap-8 col-span-2">
             <div class="flex gap-4">
               <p-checkbox
+                inputId="nullable"
                 name="nullable"
                 [(ngModel)]="columnFormData.nullable"
                 [binary]="true"
                 size="large"
               />
-              <div>
-                <label class="text-sm">Allow Nullable</label>
+              <label for="nullable" class="text-sm">
+                Allow Nullable
                 <p class="text-surface-500 text-xs">
                   Allows the column to be left blank (optional).
                 </p>
-              </div>
+              </label>
             </div>
             <div class="flex gap-4">
               <p-checkbox
+                inputId="unique"
                 name="unique"
                 [(ngModel)]="columnFormData.unique"
                 [binary]="true"
                 size="large"
               />
-              <div>
-                <label class="text-sm">Is Unique</label>
+              <label for="unique" class="text-sm">
+                Is Unique
                 <p class="text-surface-500 text-xs">
                   Ensures all values are different (no duplicates). Can be blank if allowed, unlike
                   Primary Key.
                 </p>
-              </div>
+              </label>
             </div>
           </div>
         </div>
