--- a/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
+++ b/client/src/app/features/base/table/components/column-editor/column-editor-drawer.component.html
@@ -1,7 +1,7 @@
 <ng-template #dateFormatBuilder>
   <div class="space-y-2">
     <div class="flex flex-col gap-1">
-      <label for="format" class="text-sm">Format</label>
+      <label for="format" class="text-sm">Date Format</label>
       <p-select
         inputId="format"
         name="format"
@@ -16,6 +16,7 @@
       <p-toggleswitch name="showTime" [(ngModel)]="columnFormData.presentation.format.showTime" />
       <label class="text-sm">Show time</label>
     </div>
+    <p class="text-surface-500 text-xs">The date format to display the column values.</p>
   </div>
 </ng-template>
 
@@ -94,19 +95,6 @@
                 }
                 <p class="text-surface-500 text-xs">
                   Only letters, numbers, and _ allowed. Must start with a letter or _.
-                </p>
-              </div>
-              <div class="flex flex-col gap-1">
-                <label for="uiName" class="text-sm">UI Name</label>
-                <input
-                  pInputText
-                  id="uiName"
-                  name="uiName"
-                  [(ngModel)]="columnFormData.presentation.uiName"
-                  placeholder="Input here..."
-                />
-                <p class="text-surface-500 text-xs">
-                  The display name for the column. This does not affect the database schema.
                 </p>
               </div>
               <div class="flex flex-col gap-1">
@@ -251,7 +239,6 @@
                 </div>
               }
               @case (DataType.Date) {
-                <ng-container [ngTemplateOutlet]="dateFormatBuilder"></ng-container>
                 <div class="flex flex-col gap-1">
                   <label for="minDate" class="text-sm">Min date</label>
                   <p-datepicker
@@ -397,6 +384,34 @@
                 </div>
               }
               @case (DataType.AutoNumber) {}
+              @case (DataType.AutoDate) {}
+            }
+          </div>
+        </div>
+      </div>
+      <p-divider />
+      <div class="p-5">
+        <div class="grid grid-cols-3 w-full gap-12">
+          <label class="col-span-1">
+            <p class="font-medium text-sm">Presentation</p>
+            <p class="text-surface-500 text-xs">This does not affect the database schema.</p>
+          </label>
+          <div class="flex flex-col gap-8 col-span-2">
+            <div class="flex flex-col gap-1">
+              <label for="uiName" class="text-sm">Display Name</label>
+              <input
+                pInputText
+                id="uiName"
+                name="uiName"
+                [(ngModel)]="columnFormData.presentation.uiName"
+                placeholder="Input here..."
+              />
+              <p class="text-surface-500 text-xs">The display name for the column.</p>
+            </div>
+            @switch (selectedDataType()) {
+              @case (DataType.Date) {
+                <ng-container [ngTemplateOutlet]="dateFormatBuilder"></ng-container>
+              }
               @case (DataType.AutoDate) {
                 <ng-container [ngTemplateOutlet]="dateFormatBuilder"></ng-container>
               }
