--- a/client/src/app/features/base/table/components/record-editor/record-editor-drawer.component.html
+++ b/client/src/app/features/base/table/components/record-editor/record-editor-drawer.component.html
@@ -190,6 +190,7 @@
   position="right"
   [header]="mode() === 'view' ? 'View Record' : mode() === 'edit' ? 'Edit Record' : 'Add Record'"
   styleClass="!w-150 custom-drawer"
+  (onShow)="onShow()"
   (onHide)="onHide()"
 >
   <ng-template #content>
